--- a/src/css/pages/launch-squeeze.styl
+++ b/src/css/pages/launch-squeeze.styl
@@ -74,7 +74,8 @@
     background-color: rgb(101, 97, 97);
   .btn-share
     font-family: 'Open Sans', sans-serif
-
+    -webkit-appearance: none;
+  
     margin-top: 3px;
     margin-right: 2px
     padding-left: 10px
@@ -188,7 +189,7 @@
 
   .opt-in
     //top: 50%;
-    top: 57px
+    top: 54px
     position: relative;
 
     background-color: #000000b3;
@@ -296,9 +297,9 @@
 
 
         bottom: 4px;
-      .putting
-        h6
-          max-width: 196px;
+        .putting
+          h6
+            max-width: 196px;
 
 
 
